# alphazoo

./: .claudeignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/examples/: connect_four.yaml
docs/: configuration.md  details.md  install.md  project.md
main/: __init__.py  network_manager.py
main/configs/: __init__.py  alphazero_config.py  alphazoo_config.py  search_config.py  training_config.py
main/search/: explorer.py  node.py
main/testing/: remote_test_manager.py  remote_tester.py  test_manager.py  tester.py
main/testing/agents/: agent.py
main/training/: alphazero.py  alphazoo.py  gamer.py  replay_buffer.py
main/utils/: remote_storage.py
main/utils/caches/: cache.py  dict_cache.py  keyless_cache.py
main/utils/functions/: general_utils.py  loading_utils.py  loss_functions.py  ray_utils.py  yaml_utils.py
main/wrappers/: __init__.py  pettingzoo_wrapper.py
search/: explorer.py  node.py
src/alphazoo/: __init__.py  alphazoo.py  ialphazoo_game.py  utils.py
src/alphazoo/_internal_utils/: checkpoint.py  common.py  concurrency.py  env.py  inference.py  loss_functions.py  optimization.py  optimizer.py  training.py
src/alphazoo/configs/: __init__.py  alphazoo_config.py  optimizer_config.py  replay_buffer_config.py  scheduler_config.py  search_config.py
src/alphazoo/core/: exception_handler.py
src/alphazoo/envs/: __init__.py  gym_wrapper.py  pettingzoo_wrapper.py
src/alphazoo/inference/: __init__.py  iinference_client.py  iinference_replica.py  iinference_server.py  inference_client.py  inference_server.py  inference_slot.py  local_inference_client.py  remote_replica.py  server.py
src/alphazoo/internal_utils/: common.py  concurrency.py  exception_handler.py  optimizer.py  progress.py
src/alphazoo/metrics/: __init__.py  recorder.py  store.py  types.py
src/alphazoo/networks/: __init__.py  interfaces.py  model_host.py  network_manager.py
src/alphazoo/profiling/: profiler.py
src/alphazoo/search/: explorer.py  node.py
src/alphazoo/training/: alphazoo.py  game_encoder.py  game_record.py  gamer.py  gamer_group.py  network_trainer.py  reanalyse_coordinator.py  reanalyser.py  replay_buffer.py  targets.py
src/alphazoo/utils/: mcts.py  remote_storage.py  training.py
src/alphazoo/wrappers/: __init__.py  ipettingzoo_wrapper.py  pettingzoo_wrapper.py
test/: __init__.py  conftest.py  helpers.py  mocks.py  test_checkpoint.py  test_chess.py  test_connect_four.py  test_custom_obs_space.py  test_early_stop.py  test_go.py  test_keyless_cache.py  test_profiling.py  test_public_utils.py  test_recurrent_support.py  test_search.py  test_search_connect_four.py  test_search_mock.py  test_search_tictactoe.py  test_serialization.py  test_tictactoe.py  test_value_perspective.py  test_wrapper.py
test/configs/: chess_reanalyse_async_test.yaml  chess_seq_test.yaml  connect_four_async_test.yaml  connect_four_parallel_async_test.yaml  connect_four_parallel_seq_test.yaml  connect_four_profiling.yaml  connect_four_reanalyse_async_test.yaml  connect_four_reanalyse_seq_test.yaml  connect_four_seq_test.yaml  connect_four_test.yaml  frozen_lake_reanalyse_seq_test.yaml  frozen_lake_rpc_test.yaml  frozen_lake_seq_test.yaml  go_async_test.yaml  go_reanalyse_seq_test.yaml  go_seq_test.yaml  mock_async_test.yaml  mock_seq_test.yaml  profiling.yaml  profiling_async.yaml  profiling_seq.yaml  test_search_config.yaml  test_train_config.yaml  tictactoe_async_test.yaml  tictactoe_parallel_async_test.yaml  tictactoe_parallel_seq_test.yaml  tictactoe_reanalyse_seq_test.yaml  tictactoe_recurrent_seq_test.yaml  tictactoe_seq_test.yaml
test/suites/components/: test_metrics.py
test/suites/data/: test_custom_obs_space.py  test_value_perspective.py
test/suites/envs/: test_gym_wrapper.py  test_serialization.py  test_zoo_wrapper.py
test/suites/games/: test_chess.py  test_connect_four.py  test_frozen_lake.py  test_go.py  test_recurrent_support.py  test_tictactoe.py
test/suites/lifecycle/: test_checkpoint.py  test_early_stop.py
test/suites/profiling/: test_profiling.py
test/suites/public_api/: test_public_utils.py
test/suites/search/: test_search.py  test_search_mock.py
test/utils/: end_to_end_test.py  mocks.py
test/utils/mocks/: __init__.py  countdown_game.py  (+5 more)
testing/: remote_test_manager.py  test_manager.py  tester.py
training/: alphazero.py  gamer.py
utils/caches/: cache.py  dict_cache.py  keyless_cache.py
utils/functions/: general_utils.py  loading_utils.py  ray_utils.py  stats_utils.py
utils/progress_bars/: print_bar.py
wrappers/: pettingzoo_wrapper.py
(+46 files in other folders)
