[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "alphazoo"
version = "0.1.0"
description = "Standalone AlphaZero implementation with PettingZoo compatibility"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Guilherme Palma"}
]
keywords = ["reinforcement-learning", "alphazero", "mcts", "pettingzoo", "self-play"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/guilherme439/alphazoo"
Documentation = "https://github.com/guilherme439/alphazoo#readme"
Repository = "https://github.com/guilherme439/alphazoo"
"Bug Tracker" = "https://github.com/guilherme439/alphazoo/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements-dev.txt"]}

[tool.setuptools.package-dir]
alphazoo = "main"

[tool.setuptools]
packages = [
    "alphazoo",
    "alphazoo.configs",
    "alphazoo.search",
    "alphazoo.training",
    "alphazoo.testing",
    "alphazoo.testing.agents",
    "alphazoo.testing.agents.generic",
    "alphazoo.utils",
    "alphazoo.utils.caches",
    "alphazoo.utils.functions",
    "alphazoo.utils.progress_bars",
    "alphazoo.wrappers",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
