[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "alphazoo"
version = "0.1.0"
description = "Standalone AlphaZero implementation with PettingZoo compatibility"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Guilherme Palma"}]
keywords = ["reinforcement-learning", "alphazero", "mcts", "pettingzoo", "self-play"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy~=1.24",
    "torch~=2.0",
    "pettingzoo~=1.24",
    "gymnasium~=1.1",
    "ray~=2.7",
    "scipy~=1.11",
    "ruamel.yaml~=0.17",
    "psutil~=5.9",
    "termcolor~=2.3",
    "progress~=1.6",
    "more_itertools~=9.0",
]

[project.urls]
Homepage = "https://github.com/guilherme439/alphazoo"
Documentation = "https://github.com/guilherme439/alphazoo#readme"
Repository = "https://github.com/guilherme439/alphazoo"
"Bug Tracker" = "https://github.com/guilherme439/alphazoo/issues"

[tool.flit.module]
name = "alphazoo"

[dependency-groups]
test = [
    "pytest~=7.4",
    "pytest-cov~=4.1",
    "pettingzoo[classic]~=1.24",
]
