[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "alphazoo"
version = "0.1.0"
description = "Standalone AlphaZero implementation with PettingZoo compatibility"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [{name = "Guilherme Palma"}]
keywords = ["reinforcement-learning", "alphazero", "mcts", "pettingzoo", "self-play"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy~=2.3",
    "torch~=2.9",
    "pettingzoo~=1.26",
    "gymnasium~=1.3",
    "ray~=2.55",
    "scipy~=1.15",
    "readerwriterlock~=1.0",
    "omegaconf>=2.4.0.dev0",
]

[project.urls]
Homepage = "https://github.com/guilherme439/alphazoo"
Documentation = "https://github.com/guilherme439/alphazoo#readme"
Repository = "https://github.com/guilherme439/alphazoo"

[tool.flit.module]
name = "alphazoo"

[dependency-groups]
test = [
    "pytest~=8.3",
    "pytest-cov~=5.0",
    "pettingzoo[classic]~=1.26",
    "py-spy~=0.4",
]

dev = [
    {include-group = "test"},
]

[tool.pytest.ini_options]
markers = ["profiling: manual profiling tests (not run by default)"]
addopts = "-m 'not profiling'"
